--- a/MVCMusicStoreApplication/MVCMusicStoreApplication/Views/StoreManager/Test.cshtml
+++ b/MVCMusicStoreApplication/MVCMusicStoreApplication/Views/StoreManager/Test.cshtml
@@ -21,10 +21,10 @@
 </div>
 
 
-
-        @Html.DropDownList("AlbumsByName")
-        @Html.DropDownList("AlbumsByArtist")
-        @Html.DropDownList("AlbumsByGenre")
-    </div>
+<div>
+    @Html.DropDownList("AlbumsByName")
+    @Html.DropDownList("AlbumsByArtist")
+    @Html.DropDownList("AlbumsByGenre")
+</div>
 
 
