--- a/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Delete.cshtml
+++ b/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Delete.cshtml
@@ -1,15 +1,14 @@
 ﻿@model EnrollmentApplication.Models.Enrollment
-
 @{
     ViewBag.Title = "Delete";
 }
 
 <h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Enrollment</h4>
     <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Course.Coursetitle)
@@ -52,8 +51,8 @@
         </dd>
 
     </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
@@ -61,4 +60,4 @@
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
-</div>
+</div> 
