--- a/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Create.cshtml
+++ b/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Create.cshtml
@@ -71,7 +71,7 @@
 
     @* EnrollmentSmester RadioButton*@
     <div class="form-group">
-        @Html.LabelFor(model => model.EnrollmentSemester, htmlAttributes: new { @class = "controllabel col-md-2" })
+        @Html.LabelFor(model => model.EnrollmentSemester, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.RadioButtonFor(model => model.EnrollmentSemester, new { htmlAttributes = new { @class = "form-control" } }, "Spring")
             @Html.RadioButtonFor(model => model.EnrollmentSemester, new { htmlAttributes = new { @class = "form-control" } }, "Summer")
