--- a/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Edit.cshtml
+++ b/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Edit.cshtml
@@ -58,7 +58,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control"} })
+            @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control"}})
             @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -78,15 +78,15 @@
 
         <div class="col-md-10">
             <div>
-                @Html.Label("US")
+                @Html.Label("Spring")
                 @Html.RadioButtonFor(model => model.EnrollmentSemester, "Spring", htmlAttributes: new { @class = "control-label col-md-2" })
             </div>
             <div>
-                @Html.Label("UK")
+                @Html.Label("Summer")
                 @Html.RadioButtonFor(model => model.EnrollmentSemester, "Summer", htmlAttributes: new { @class = "control-label col-md-2" })
             </div>
             <div>
-                @Html.Label("Other")
+                @Html.Label("Fall")
                 @Html.RadioButtonFor(model => model.EnrollmentSemester, "Fall", htmlAttributes: new { @class = "control-label col-md-2" })
             </div>
             @Html.ValidationMessageFor(model => model.EnrollmentSemester, "", new {  @class = "text-danger" })
