--- a/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Delete.cshtml
+++ b/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Delete.cshtml
@@ -53,6 +53,14 @@
         </dd>
         *@
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Notes)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Notes)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
