--- a/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Index.cshtml
+++ b/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Index.cshtml
@@ -19,6 +19,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Grade)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Notes)
+        </th>
 
         @*
         <th>
@@ -50,6 +53,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.Grade)
         </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Notes)
+        </td>
 
         @*
         <td>
@@ -67,7 +73,8 @@
             @Html.TextBoxFor(modelItem => item.EnrollmentYear)
         </td>
 
-            *@
+        *@
+
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.EnrollmentId }) |
             @Html.ActionLink("Details", "Details", new { id = item.EnrollmentId }) |
