--- a/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Index.cshtml
+++ b/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Index.cshtml
@@ -5,6 +5,8 @@
 
 <h2>Index</h2>
 
+@* This line needs to be fixed each time i switch it it only shows the ouput for the first one instaed of showing for each one*@
+
 @*Search By Student *@
 <div class="panel panel-default">
     <div class="panel-heading">Search by Student</div>
