--- a/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Index.cshtml
+++ b/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/Index.cshtml
@@ -5,8 +5,6 @@
 
 <h2>Index</h2>
 
-@* This line needs to be fixed each time i switch it it only shows the ouput for the first one instaed of showing for each one*@
-
 @*Search By Student *@
 <div class="panel panel-default">
     <div class="panel-heading">Search by Student</div>
@@ -26,10 +24,10 @@
         {
             <input type="text" name="q" />
             <input type="submit" value="search" />
-            <div id="searchresults">
-
-            </div>
         }
+        <div id="searchresults">
+
+        </div>
     </div>
 
 </div>
@@ -44,7 +42,7 @@
                     {
                         InsertionMode = InsertionMode.Replace,
                         HttpMethod = "GET",
-                        UpdateTargetId = "searchresults",
+                        UpdateTargetId = "results",
                         LoadingElementId = "ajax-loader",
                         OnFailure = "searchFailed",
                     }
@@ -53,15 +51,13 @@
         {
             <input type="text" name="q" />
             <input type="submit" value="search" />
-            <div id="searchresults">
-
-            </div>
         }
+        <div id="results">
+
+        </div>
     </div>
 
 </div>
-
-
 
 <p>
     @Html.ActionLink("Create New", "Create")
