--- a/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/SearchbyCourse.cshtml
+++ b/EnrollmentApplication/EnrollmentApplication/Views/Enrollment/SearchbyCourse.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<EnrollmentApplication.Models.Course>
 
-<div id="searchresults">
+<div id="results">
     <ul>
         @foreach (var item in Model)
         {
