--- a/MVCMusicStoreApplication/MVCMusicStoreApplication/Views/Store/Details.cshtml
+++ b/MVCMusicStoreApplication/MVCMusicStoreApplication/Views/Store/Details.cshtml
@@ -4,22 +4,28 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
 <div>
     <h4>Album</h4>
     <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Title)
+        </dt>
 
-    @foreach (var item in Model)
-    {
-        @Html.ActionLink(item.Title, "Index", new { id = item.AlbumId });
-        @Html.ActionLink(item.Price, "Index", new { id = item.AlbumId });
-    }
+        <dd>
+            @Html.DisplayFor(model => model.Title)
+        </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Price)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.Price)
+        </dd>
 
+    </dl>
 </div>
-<div class="panel-body">
-    @Html.ActionLink("Add to Cart", "Index", "ShoppingCart", new { id = Model.AlbumId }, new { @class = "btn btn-primary" })
 
-</div>
+@Html.ActionLink("Add to Cart", "Album", "ShoppingCart", new { @class = "btn btn-primary" })
