--- a/MVCMusicStoreApplication/MVCMusicStoreApplication/Views/Store/Details.cshtml
+++ b/MVCMusicStoreApplication/MVCMusicStoreApplication/Views/Store/Details.cshtml
@@ -28,5 +28,4 @@
 
     </dl>
 </div>
-
-@Html.ActionLink("Add to Cart", "Album", "ShoppingCart", new { @class = "btn btn-primary" })
+@Html.ActionLink("Add to Cart", "AddtoCart", "ShoppingCart", new { @class = "btn btn-primary" })
