--- a/EventApplication/EventApplication/Views/Home/Index.cshtml
+++ b/EventApplication/EventApplication/Views/Home/Index.cshtml
@@ -10,10 +10,10 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Find an Event</h2>
-        <p><a class="btn btn-default" href="/">Event or Event Type</a>
-        <a class="btn btn-default" href="/">Location, City or State</a>       
-        <input type="submit" value="Search" /> 
-        </p>
+        <a href="EventType" class="btn btn-default">Event or Event Type</a>
+        <a class="btn btn-default" href="/">Location, City or State</a>
+        <input type="submit" value="Search" />
+
     </div>
     <div class="col-md-4">
         <p><a class="btn btn-default" href="/">Click here to see Last Minute Deals!</a></p>
