--- a/EventApplication/EventApplication/Views/Event/Details.cshtml
+++ b/EventApplication/EventApplication/Views/Event/Details.cshtml
@@ -11,6 +11,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.EventType.Type)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EventType.Type)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Title)
         </dt>
 
