--- a/EventApplication/EventApplication/Content/Site.css
+++ b/EventApplication/EventApplication/Content/Site.css
@@ -4,6 +4,8 @@
     border: none;
 }
 
+
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
@@ -11,9 +13,13 @@ body {
     padding: 10px 6%;
 }
 
+
+
 #container {
     float: left;
 }
+
+
 
 #header {
     float: left;
@@ -22,6 +28,8 @@ body {
     margin-bottom: 10px;
 }
 
+
+
     #header h1 {
         font-size: 18px;
         float: left;
@@ -29,15 +37,21 @@ body {
         padding: 45px 0px 5px 0px;
     }
 
+
+
 #promotion {
     height: 300px;
     width: 700px;
     background: url.(/content/Images/home-showcase.png) no-repeat;
 }
 
+
+
 ul li a {
     font-size: 16px;
 }
+
+
 
 #main {
     overflow: hidden;
@@ -45,16 +59,22 @@ ul li a {
     float: left;
 }
 
+
+
 ul {
     list-style-type: square;
     margin-left: 25px;
     font-size: 14px;
 }
 
+
+
     ul#album-list {
         list-style: none;
         margin-left: 0px;
     }
+
+
 
         ul#album-list li {
             height: 130px;
@@ -64,24 +84,34 @@ ul {
             text-align: center;
         }
 
+
+
             ul#album-list li a, ul#album-list li .button {
                 font-size: 13px;
                 float: left;
             }
+
+
 
                 ul#album-list li a span {
                     color: #9b9993;
                     text-decoration: underline;
                 }
 
+
+
 #cart {
     float: right;
 }
+
+
 
 #update-message {
     color: #F6855E;
     font-weight: bold;
 }
+
+
 
 .button, input[type=submit] {
     clear: both;
@@ -94,9 +124,13 @@ ul {
     font-weight: bold;
 }
 
+
+
     .button a {
         color: #fff !important;
     }
+
+
 
 #footer {
     clear: both;
@@ -107,15 +141,21 @@ ul {
     font-family: Constantia, Georgia, serif;
 }
 
+
+
 /******************** Top Navigation ************************/
 
 ul#navlist {
     float: right;
 }
 
+
+
     ul#navlist li {
         display: inline;
     }
+
+
 
         ul#navlist li a {
             border-left: 1px dotted #8A8575;
@@ -126,24 +166,36 @@ ul#navlist {
             float: left;
         }
 
+
+
         ul#navlist li:first-child a {
             border: none;
         }
+
+
 
         ul#navlist li a:hover {
             color: #F6855E;
         }
 
+
+
 /********************* End top navigation ***************************/
+
+
 
 p {
     margin-bottom: 15px;
     margin-top: 0px;
 }
 
+
+
 h2 {
     color: #5e5b54;
 }
+
+
 
 h2, h3 {
     margin-bottom: 10px;
@@ -152,13 +204,19 @@ h2, h3 {
     font-weight: bold;
 }
 
+
+
 h3 {
     color: #9B9993;
 }
 
+
+
     #header h1 a, h3 em {
         color: #5E5B54;
     }
+
+
 
 a:link, a:visited {
     color: #F6855E;
@@ -166,11 +224,15 @@ a:link, a:visited {
     font-weight: bold;
 }
 
+
+
 a:hover {
     color: #333333;
     text-decoration: none;
     font-weight: bold;
 }
+
+
 
 a:active {
     color: #006633;
@@ -178,7 +240,11 @@ a:active {
     font-weight: bold;
 }
 
+
+
 /***************************** sidebar navigation ****************************/
+
+
 
 #categories {
     font-family: Constantia, Georgia, serif;
@@ -189,14 +255,20 @@ a:active {
     float: left;
 }
 
+
+
     #categories a:link, #categories a:visited {
         color: #9B9993;
         text-decoration: none;
     }
 
+
+
     #categories a:hover {
         color: #F46739;
     }
+
+
 
 div#album-details p {
     margin-bottom: 5px;
@@ -204,9 +276,13 @@ div#album-details p {
     font-weight: bold;
 }
 
+
+
 p em {
     color: #9b9993;
 }
+
+
 
 /* Form styles */
 
@@ -215,6 +291,8 @@ legend {
     font-weight: bold;
 }
 
+
+
 fieldset {
     border: #9b9993 1px solid;
     padding: 0 10px;
@@ -222,14 +300,20 @@ fieldset {
     clear: left;
 }
 
+
+
 div.editor-field {
     margin-bottom: 10px;
 }
+
+
 
 input[type=text], input[type=password], select {
     border: 1px solid #8A8575;
     width: 300px;
 }
+
+
 
 /* Styles for validation helpers */
 
@@ -237,23 +321,33 @@ input[type=text], input[type=password], select {
     color: #ff0000;
 }
 
+
+
 .field-validation-valid {
     display: none;
 }
+
+
 
 .input-validation-error {
     border: 1px solid #ff0000;
     background-color: #ffeeee;
 }
 
+
+
 .validation-summary-errors {
     font-weight: bold;
     color: #ff0000;
 }
 
+
+
 .validation-summary-valid {
     display: none;
 }
+
+
 
 /* Tables */
 
@@ -265,10 +359,14 @@ table {
     width: 100%;
 }
 
+
+
 tr {
     border: 1px solid #000;
     line-height: 25px;
 }
+
+
 
 th {
     background-color: #9b9993;
@@ -277,16 +375,35 @@ th {
     text-align: left;
 }
 
+
+
 th, td {
     padding-left: 5px;
 }
+
+
 
 tr:hover {
     background-color: #fff;
 }
 
 
-/*body {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+    body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
