--- a/EventApplication/EventApplication/Views/Home/Index.cshtml
+++ b/EventApplication/EventApplication/Views/Home/Index.cshtml
@@ -15,57 +15,26 @@
         <a class="btn btn-default" href="/">Location, City or State</a>
         <input type="submit" value="Search" />
     </div>
-    <div class="col-md-4">
-            <p><a class="btn btn-default" href="/">Click here to see Last Minute Deals!</a></p>
-        </div>
-        @*
+   @* <div class="col-md-4">
+        <p><a class="btn btn-default" href="/">Click here to see Last Minute Deals!</a></p> 
+    </div>
+*@
 
-    <div id="dailydeal">
-        @Ajax.ActionLink("Click here to see Last Minute Deals!",
-        "DailyDeal",
+    <div id="lastminutedeals">
+        @Ajax.ActionLink("Click here to see last minutes deals!",
+        "LastMinuteDeals",
         null,
-        new AjaxOptions
-        {
-            UpdateTargetId = "daildeal",
+        new AjaxOptions {
+            UpdateTargetId = "lastminutedeals",
             InsertionMode = InsertionMode.Replace,
             HttpMethod = "GET"
         },
-        new { @class = "btn btn-primary"})
-    </div>
-</div>
-@*<div class="panel panel-default">
-        <div class="panel-heading">
-            Event Last Minute Search</div>
-        <div class="panel-body">
-            @using (
-                Ajax.BeginForm("LastMinuteDeals", "Event",
-                    new AjaxOptions
-                    {
-                        InsertionMode = InsertionMode.Replace,
-                        HttpMethod = "GET",
-                        UpdateTargetId = "searchresults",
-                        LoadingElementId = "ajax-loader",
-                        OnFailure = "searchFailed"
-                    }
-                )
-            )
-            {
-                <input type="text" name="q" />
-                <input type="submit" value="search" />
-            }
-            <div id="searchresults">
-
-            </div>
-        </div>
-
-    </div >
-*@
+        new {@class = "btn btn-primary"})
+        
+    </div> 
+</div>   
+  
 @section Scripts
 {
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
-    @* 
-    Not sure yet of the EventScript make sure you check in case error comes up    
-    *
-    <script src="~/Scripts/Apps/EventScript.js"></script>
-        *@
 }
