--- a/EventApplication/EventApplication/Views/Event/Details.cshtml
+++ b/EventApplication/EventApplication/Views/Event/Details.cshtml
@@ -101,6 +101,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.EventId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Register", "Register", new { id = Model.EventId }) |
+    @Html.ActionLink("Return Home", "Index")
 </p>
