--- a/EventApplication/EventApplication/Views/Home/Index.cshtml
+++ b/EventApplication/EventApplication/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<EventApplication.Models.Event>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -11,14 +13,33 @@
     <div class="col-md-4">
         <h2>Find an Event</h2>
 
+        @using (
+
+            Ajax.BeginForm("FindanEvent", "Event",
+                new AjaxOptions
+                {
+                    InsertionMode = InsertionMode.Replace,
+                    HttpMethod = "GET",
+                    UpdateTargetId = "searchresults",
+                    LoadingElementId = "ajax-loader",
+                    OnFailure = "searchFailed",
+                }
+            )
+        )
+        {
+            <input type="text" placeholder="Event or EventType" name="EventType" />
+            <input type="text" placeholder="Location, City or State" name="EventType" />
+            <input type="submit" value="search" />
+        }
+        <div id="searchresults">
+        </div>
+
+        @*
         <a href="EventType" class="btn btn-default">Event or Event Type</a>
         <a class="btn btn-default" href="/">Location, City or State</a>
         <input type="submit" value="Search" />
+        *@
     </div>
-   @* <div class="col-md-4">
-        <p><a class="btn btn-default" href="/">Click here to see Last Minute Deals!</a></p> 
-    </div>
-*@
 
     <div id="lastminutedeals">
         @Ajax.ActionLink("Click here to see last minutes deals!",
@@ -30,10 +51,10 @@
             HttpMethod = "GET"
         },
         new {@class = "btn btn-primary"})
-        
-    </div> 
-</div>   
-  
+
+    </div>
+</div>
+
 @section Scripts
 {
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
