--- a/EventApplication/EventApplication/Views/Home/_LastMinuteDeals.cshtml
+++ b/EventApplication/EventApplication/Views/Home/_LastMinuteDeals.cshtml
@@ -1,45 +1,43 @@
-﻿@*
-<h2>
-    Daily Deal
-</h2>
-*@
-
-
-    @model IEnumerable<EventApplication.Models.Event>
-    @{
-        ViewBag.Title = "Last Minute Deals";
-    }
-
-    <table class="table">
-        <tr>
-            @foreach (var item in Model)
-            {
-                <td>
-                    @Html.ActionLink(item.Title, "Details", new { id = item.EventId })
-                </td>
-                <td>
-                    @Html.DisplayNameFor(model => model.StartDate)
-                </td>
-                <td>
-                    @Html.DisplayNameFor(model => model.City)
-                </td>
-                <td>
-                    @Html.DisplayNameFor(model => model.State)
-                </td>
-            }
-        </tr>
-    </table>
-
-
-
-
+﻿@model IEnumerable<EventApplication.Models.Event>
+@{
+    ViewBag.Title = "Last Minute Deals";
+}
         <table class="table">
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td></td>
-                </tr>
-            }
+            <tr>
+                @foreach (var item in Model)
+                {
+                <th>
+                    @Html.DisplayNameFor(model => model.Title)
+                </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StartDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.City)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.State)
+                    </th>
+                }
+                
+        @foreach (var item in Model)
+        {
+            <tr>
+            <td>
+                @Html.ActionLink(item.Title, "Details", new { id = item.EventId })
+            </td>
+            <td>
+                @item.StartDate
+            </td>
+            <td>
+                @item.City
+            </td>
+            <td>
+                @item.State
+            </td>
+        
+    </tr>
+        }
+</table>
 
-        </table>*@
-
+        
