--- a/EventApplication/EventApplication/Views/Home/Index.cshtml
+++ b/EventApplication/EventApplication/Views/Home/Index.cshtml
@@ -38,6 +38,7 @@
         <a href="EventType" class="btn btn-default">Event or Event Type</a>
         <a class="btn btn-default" href="/">Location, City or State</a>
         <input type="submit" value="Search" />
+         @*For Pushing Purposes
         *@
     </div>
 
