--- a/EventApplication/EventApplication/Views/Home/Index.cshtml
+++ b/EventApplication/EventApplication/Views/Home/Index.cshtml
@@ -23,22 +23,25 @@
                     UpdateTargetId = "searchresults",
                     LoadingElementId = "ajax-loader",
                     OnFailure = "searchFailed",
+                    
                 }
             )
         )
         {
-            <input type="text" placeholder="Event or EventType" name="EventType" />
-            <input type="text" placeholder="Location, City or State" name="EventType" />
+            <input type="text" class="btn btn-default" placeholder="Event or EventType" name="EventType" />
+            <input type="text" class="btn btn-default" placeholder="Location, City or State" name="EventType" />
             <input type="submit" value="search" />
         }
         <div id="searchresults">
+
         </div>
+
+
 
         @*
         <a href="EventType" class="btn btn-default">Event or Event Type</a>
         <a class="btn btn-default" href="/">Location, City or State</a>
         <input type="submit" value="Search" />
-         @*For Pushing Purposes
         *@
     </div>
 
