--- a/EventApplication/EventApplication/Views/Home/Index.cshtml
+++ b/EventApplication/EventApplication/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
         )
         {
             <input type="text" class="btn btn-default" placeholder="Event or EventType" name="q" />
-            <input type="text" class="btn btn-default" placeholder="Location, City or State" name="q" />
+            <input type="text" class="btn btn-default" placeholder="Location, City or State" name="z" />
             <input type="submit" value="search" />
         }
         <div id="searchresults">
