--- a/EventApplication/EventApplication/Views/Event/Details.cshtml
+++ b/EventApplication/EventApplication/Views/Event/Details.cshtml
@@ -102,5 +102,5 @@
 </div>
 <p>
     @Html.ActionLink("Register", "Register", new { id = Model.EventId }) |
-    @Html.ActionLink("Return Home", "Index")
+    @Html.ActionLink("Return Home", "Home")
 </p>
