--- a/EventApplication/EventApplication/Views/Home/_LastMinuteDeals.cshtml
+++ b/EventApplication/EventApplication/Views/Home/_LastMinuteDeals.cshtml
@@ -2,24 +2,22 @@
 @{
     ViewBag.Title = "Last Minute Deals";
 }
-        <table class="table">
-            <tr>
-                @foreach (var item in Model)
-                {
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.StartDate)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.City)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.State)
-                    </th>
-                }
-                
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Title)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StartDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.City)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.State)
+        </th>
+            @*</tr> @* JUST ADDED WHEN NOTHING WAS SHOWING AGAIN*@
+
         @foreach (var item in Model)
         {
             <tr>
@@ -35,9 +33,9 @@
             <td>
                 @item.State
             </td>
-        
-    </tr>
-        }
+            </tr>
+    }
+    
 </table>
 
         
