--- a/EventApplication/EventApplication/Views/Event/Details.cshtml
+++ b/EventApplication/EventApplication/Views/Event/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+@*<h2>Details</h2>*@
 
 <div>
     <h4>Event</h4>
@@ -102,5 +102,5 @@
 </div>
 <p>
     @Html.ActionLink("Register", "Register", new { id = Model.EventId }) |
-    @Html.ActionLink("Return Home", "Home")
+    @Html.ActionLink("Return Home", "Index")
 </p>
