--- a/EventApplication/EventApplication/Views/Shared/_Layout.cshtml
+++ b/EventApplication/EventApplication/Views/Shared/_Layout.cshtml
@@ -41,27 +41,27 @@
                            id="Order">Ticket Ordered</a>
                     </li>
                     <li>@Html.Partial("_LoginPartial")</li>
-                </ul>
-
-                @*<ul id="navlist">
-                        <li class="first">
-                            <a href="/"
-                               id="Event">Find an Events</a>
-                        </li>
-                        <li>
-                            <a href="/"
-                               id="EventType">Organize an Event</a>
-                        </li>
-                        <li>
-                            <a href="/"
-                               id="Order">Ticket Ordered</a>
-                        </li>
-                    </ul>
-                            *
-                            @Html.Partial("_LoginPartial") @*This makes the register and login before the three lists*@
+                </ul>                
             </div>
         </div>
     </div>
+
+
+    @* Register Start Here*@
+    <div id="header">
+        @Scripts.Render("~/bundles/jquery")
+        <ul id="navlist">
+            <li class="first">
+                <a href="/"
+                   id="current">Home</a>
+            </li>
+
+            <li>
+                <a href="EventRegister/Register">Register</a>
+            </li>
+        </ul>
+    </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
