--- a/EventApplication/EventApplication/Views/Home/FindanEvent.cshtml
+++ b/EventApplication/EventApplication/Views/Home/FindanEvent.cshtml
@@ -21,7 +21,7 @@
             {
                 <tr>
                 <td>
-                    @Html.ActionLink(item.Title, "Details", new { id = item.EventId })
+                    @Html.ActionLink(item.Title, "EventDetails", new { id = item.EventId })
                 </td>
                 <td>
                     @item.StartDate
