--- a/EventApplication/EventApplication/Views/Home/_LastMinuteDeals.cshtml
+++ b/EventApplication/EventApplication/Views/Home/_LastMinuteDeals.cshtml
@@ -8,7 +8,8 @@
             @Html.DisplayNameFor(model => model.Title)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.StartDate)
+            
+            @Html.DisplayNameFor(model => model.StartDate.ToString("dddd d MMMM yyyy"))
         </th>
         <th>
             @Html.DisplayNameFor(model => model.City)
