--- a/EventApplication/EventApplication/Views/Home/_LastMinuteDeals.cshtml
+++ b/EventApplication/EventApplication/Views/Home/_LastMinuteDeals.cshtml
@@ -9,7 +9,7 @@
         </th>
         <th>
             
-            @Html.DisplayNameFor(model => model.StartDate.ToString("dddd d MMMM yyyy"))
+            @Html.DisplayNameFor(model => model.StartDate)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.City)
