--- a/EventApplication/EventApplication/Views/Home/FindanEvent.cshtml
+++ b/EventApplication/EventApplication/Views/Home/FindanEvent.cshtml
@@ -1,8 +1,6 @@
-﻿
-@model IEnumerable<EventApplication.Models.Event>
+﻿@model IEnumerable<EventApplication.Models.Event>
 
 <div id="searchresults">
-
     <table class="table">
         <tr>
             <th>
@@ -17,13 +15,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.State)
             </th>
-            
             @foreach (var item in Model)
             {
-                <tr>
+            <tr>
                 <td>
                     @* This need to redirect to the Store Details*@
-                    @Html.ActionLink(item.Title, "Index", new { id = item.EventId })
+                    @Html.ActionLink(item.Title, "Details", new { id = item.EventId })
                 </td>
                 <td>
                     @item.StartDate
@@ -34,15 +31,7 @@
                 <td>
                     @item.State
                 </td>
-
             </tr>
         }
-    </table>
-</div>
-
-
-    
-
-
-
-
+        </table>
+    </div>
