--- a/EventApplication/EventApplication/Views/Shared/_Layout.cshtml
+++ b/EventApplication/EventApplication/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                            id="EventType">Organize an Event</a>
                     </li>
                     <li>
-                        <a href="/EventStore/Browse"></a>
+                        <a href="/Home/Browse"></a>
                     </li>
                     <li>
                         <a href="/Order/Index"> Ticket Ordered</a>
