--- a/EventApplication/EventApplication/Views/Home/Details.cshtml
+++ b/EventApplication/EventApplication/Views/Home/Details.cshtml
@@ -102,7 +102,7 @@
 </div>
 
 <p class="button">
-    @Html.ActionLink("Register", "Register", "OrderCart", new { id = Model.EventId }, null)
+    @Html.ActionLink("Register", "Register", "Order", new { id = Model.EventId }, null)
 </p>
 
 <div>
