--- a/EventApplication/EventApplication/Views/Event/Create.cshtml
+++ b/EventApplication/EventApplication/Views/Event/Create.cshtml
@@ -20,6 +20,7 @@
                 @Html.DropDownList("EventTypeId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.EventTypeId, "", new { @class = "text-danger" })
             </div>
+            
         </div>
 
         <div class="form-group">
@@ -127,4 +128,5 @@
     *@
 
     @Html.ActionLink("Back to Home", "Index")
+    @Html.ActionLink("Create a new Event Type", "Create","EventType")
 </div>
